--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -12,4 +12,7 @@ eureka:
     service-url:
       #设置与Eureca Server交互的地址查询服务和注册服务都需要依赖这个地址
       defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
-
+  server:
+    #是否开启自我保护机制，（由于网络延迟而被注册中心删除）默认true
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 2000
